--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,8 +17,12 @@ body {
 }
 
 .log-details-popup {
-    max-width: 300px; 
+    max-width: 500px; 
     max-height: 500px;
 }
 
+.form-popup {
+    max-width: 500px;
+    max-height: 500px;
+}
 
