added a fix to help mapbox better work on mobile and updated form styling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,12 +17,13 @@ body {
 }
 
 .log-details-popup {
-    max-width: 500px; 
+    max-width: 350px; 
     max-height: 500px;
 }
 
-.form-popup {
-    max-width: 500px;
+.popup-form {
+    width: 350px;
     max-height: 500px;
 }
+
 
