--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,14 +3,13 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    color: red; 
     height: 100vh;
     width: 100vw; 
     overflow: hidden; 
 }
 
 .log-image {
-    max-width: 200px;
+    max-width: 300px;
     height: auto;
     width: auto; 
     border-radius: 5%;
@@ -24,6 +23,10 @@ body {
 .popup-form {
     width: 350px;
     max-height: 500px;
+}
+
+.rating {
+    font-weight: bold;
 }
 
 
